--- a/SiteMaster/AdminMaster.master
+++ b/SiteMaster/AdminMaster.master
@@ -102,7 +102,8 @@
                                             <ul class="Submenu last">
                                                 <li><a href="../CityAdmin/MyProfile.aspx"><asp:Label ID="lblMyProfile" runat="server" meta:ResourceKey="lblMyProfile" /></a></li>
                                                 <li><a href="../CityAdmin/ChangePassword.aspx"><asp:Label ID="lblChangePasswords1" runat="server" meta:ResourceKey="lblChangePasswords1" /></a></li>
-                                                  <li><a href="../CityAdmin/Support.aspx"><asp:Label ID="lblCityAdmin" runat="server" meta:ResourceKey="lblSupport" /></a></li>
+                                                <li><a href="../CityAdmin/Support.aspx"><asp:Label ID="lblCityAdmin" runat="server" meta:ResourceKey="lblSupport" /></a></li>
+                                                <li><a href="../CityAdmin/CityDateSetting.aspx"><asp:Label ID="lblCityDateSetting" runat="server" meta:ResourceKey="lblCityDateSetting" /></a></li>
                                             </ul>
                                         </li>
                                     </ul>
