--- a/BikeTourPublishFiles_18Jul2016/Master.master
+++ b/BikeTourPublishFiles_18Jul2016/Master.master
@@ -1,4 +1,4 @@
-﻿<%@ master language="C#" autoeventwireup="true" inherits="Master, App_Web_1q0p2yyy" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="Master, App_Web_14ubujc3" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
