--- a/BikeTourPublishFiles_18Jul2016/Master_old.master
+++ b/BikeTourPublishFiles_18Jul2016/Master_old.master
@@ -1,4 +1,4 @@
-﻿<%@ master language="C#" autoeventwireup="true" inherits="Master_old, App_Web_bgysvwkt" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="Master_old, App_Web_o2w2s3gp" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
