--- a/BikeTourPublishFiles_18Jul2016/SiteMaster/UserMaster.master
+++ b/BikeTourPublishFiles_18Jul2016/SiteMaster/UserMaster.master
@@ -1,4 +1,4 @@
-﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster_UserMaster, App_Web_ucbtvllq" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster_UserMaster, App_Web_vi5fatrn" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
