Textual Changes for March 2017 Task List

--- a/WebApp/Master.master
+++ b/WebApp/Master.master
@@ -99,7 +99,7 @@
          <div class="supporter">
     	<div class="wrapper">
         	<div class="col col-55">
-                <h1>Bald als auch App verfügbar</h1>
+                <h1>Jetzt auch als App verfügbar</h1>
                 <h2>für dein Android-Smartphone</h2>
                 <p>Mit der App für den Android-Smartphone kannst du die Tracks ganz leicht erstellen und direkt ins Internet hochladen - einfacher gehts nicht!  </p>
                 <p><img src="_images/apple-appstore.png" /> <img src="_images/playstore.png" /></p>
@@ -118,11 +118,11 @@
         	<div class="col col-31 contact-1">
                 <div class="pad">
                     <h5>Kontakt zu Stadt-Lad-Rad</h5>
-                    <p>adfc Rhein-Neckar/Heidelberg<br />
-                    Kurfürsten-Anlage 62<br />
-                    69115 Heidelberg</p>
+                    <p>adfc Baden Württemberg<br />
+                    Rheinsbergstr. 97 <br />
+                    70197 Stuttgart</p>
                     <p>              
-                    Telefon: 	06221 - 6554-104<br />
+                    Telefon: 	0711 – 628999<br />
                     E-Mail: 	<a href="mailto:stadt-land-rad@adfc-bw.de">stadt-land-rad@adfc-bw.de</a></p>
                 </div>
             </div>
@@ -134,7 +134,8 @@
                      Hilfe bei der Anmeldung oder Bedienung <br />
                     der Technik?</p>
                     <p>              
-                    Telefon: 	06221 - 6554-104<br />
+                    Telefon: 	06221- 6554106<br />
+                    (Mo.-Fr. 08:30 – 16:30) <br />
                     E-Mail: 	<a href="mailto:stadt-land-rad@adfc-bw.de">stadt-land-rad@adfc-bw.de</a></p>
             	</div>
             </div>
